# hxposed

./: .gitattributes  .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  suggestion.md
HxPosed.GUI/: HxPosed.GUI.slnx
HxPosed.GUI/HxPosed.Core/: HxPosed.Core.csproj  HxProcess.cs  HypervisorManager.cs  HypervisorStatus.cs
HxPosed.GUI/HxPosed.Core/Async/: AsyncInfo.cs
HxPosed.GUI/HxPosed.Core/Cryptography/: WyHash.cs
HxPosed.GUI/HxPosed.Core/Exceptions/: HypervisorError.cs  HypervisorException.cs
HxPosed.GUI/HxPosed.Core/Guard/: HxGuard.cs
HxPosed.GUI/HxPosed.Core/PInvoke/: Win32.cs
HxPosed.GUI/HxPosed.Core/Request/: Authentication.cs  Process.cs  Request.cs
HxPosed.GUI/HxPosed.Core/Response/: Authentication.cs  Response.cs  StatusResponse.cs
HxPosed.GUI/HxPosed.Core/Uefi/: BootEntry.cs  BootOrder.cs  Partition.cs  Variables.cs
HxPosed.GUI/HxPosed.GUI/: App.xaml  App.xaml.cs  HxPosed.GUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
HxPosed.GUI/HxPosed.GUI/Async/: LoadFromConfigProgress.cs
HxPosed.GUI/HxPosed.GUI/Controls/: CardControl.xaml  CardControl.xaml.cs
HxPosed.GUI/HxPosed.GUI/Models/: DashboardModel.cs  InstallModel.cs  PluginModel.cs
HxPosed.GUI/HxPosed.GUI/Pages/: CallerProtectionSettings.xaml  Dashboard.xaml  (+10 more)
HxPosed.GUI/HxPosed.LogViewer/: Form1.cs  Form1.resx  HxPosed.LogViewer.csproj  Log.cs
HxPosed.GUI/HxPosed.Plugins/: GlobalSuppressions.cs  HxPosed.cs  Plugin.cs  PluginManager.cs  PluginStatus.cs  Win32.cs
HxPosed.GUI/HxPosed.Tests/: App.xaml.cs  HxPosed.Tests.csproj  HxPosed.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessModel.cs
HxPosed.GUI/libhxposed/: bindings.bat  call.c  err.c  fields.h  hxposed.c  hxposed.h  libhxposed.vcxproj  libhxposed.vcxproj.filters  req.h  resp.h  trap.asm
HxPosed.GUI/pocman/: hxposed.h  pocman.c  pocman.vcxproj  pocman.vcxproj.filters
src/hvcore/: Cargo.toml
src/hvcore/src/: lib.rs
src/hvcore/src/hypervisor/: allocator.rs  apic_id.rs  host.rs  interrupt_handlers.rs  mod.rs  platform_ops.rs  registers.rs  serial_logger.rs
src/hvcore/src/hypervisor/amd/: guest.rs
src/hvcore/src/hypervisor/intel/: guest.rs
src/hxloader/: Cargo.toml
src/hxloader/.cargo/: config.toml
src/hxloader/src/: main.rs
src/hxloader/src/nt/: bootmgfw.rs  mod.rs  ntoskrnl.rs  winload.rs
src/hxloader/src/pe/: detour.rs  hooks.rs  map.rs  mod.rs
src/hxloader/src/utils/: hxposed.rs  mod.rs  scanner.rs
src/hxposed/: Cargo.toml
src/hxposed_core/: Cargo.toml
src/hxposed_core/.cargo/: config.toml
src/hxposed_core/src/: error.rs  lib.rs
src/hxposed_core/src/events/: async_service.rs  mod.rs
src/hxposed_core/src/hxposed/: call.rs  error.rs  func.rs  mod.rs  request.rs  response.rs  status.rs
src/hxposed_core/src/hxposed/requests/: async_help.rs  auth.rs  cancel.rs  handle.rs  io.rs  memory.rs  mod.rs  notify.rs  process.rs  security.rs  status.rs  thread.rs
src/hxposed_core/src/hxposed/responses/: auth.rs  empty.rs  handle.rs  io.rs  memory.rs  mod.rs  notify.rs  process.rs  security.rs  status.rs  thread.rs
src/hxposed_core/src/hxposed/utils/: transaction.rs
src/hxposed_core/src/intern/: async_info.rs  cpu.rs  instructions.rs  mod.rs  win.rs
src/hxposed_core/src/nt/: process.rs
src/hxposed_core/src/plugins/: mod.rs  plugin_perms.rs
src/hxposed_core/src/services/: async_service.rs  callbacks.rs  cpu.rs  handle.rs  memory.rs  memory_map.rs  mod.rs  notify.rs  process.rs  security.rs  thread.rs
src/hxposed_core/src/services/types/: cpu_fields.rs  memory_fields.rs  mod.rs  process_fields.rs  security_fields.rs  thread_fields.rs
src/hxposed_core/src/svcs/: auth.rs  mod.rs  state.rs
src/uefi/: Cargo.toml
src/win_hv/: Cargo.toml  Makefile.toml
src/windows/: Cargo.toml  Makefile.toml
src/windows/check_hv_vendor/: Cargo.toml
src/windows/check_hv_vendor/src/: anti_borrow.rs  main.rs
src/windows/win_hv/: Cargo.toml
src/windows/win_hv/src/: cback.rs  lib.rs  ops.rs  registry.rs
src/windows/win_hv/src/hypervisor/: init.rs  mod.rs  ops.rs  vmexit.rs
src/windows/win_hv/src/nt/: blanket.rs  callback.rs  cback.rs  context.rs  event.rs  logger.rs  mdl.rs  mod.rs  object.rs  probe.rs  process.rs  registry.rs  thread.rs  token.rs  worker.rs
src/windows/win_hv/src/nt/arch/: cr3.rs  mod.rs  pt.rs
src/windows/win_hv/src/nt/bind/: mod.rs
src/windows/win_hv/src/nt/guard/: hxguard.rs  mod.rs  ntguard.rs
src/windows/win_hv/src/nt/lock/: mod.rs  pushlock.rs
src/windows/win_hv/src/nt/mm/: mdl.rs  mod.rs  rmd.rs
src/windows/win_hv/src/objects/: async_obj.rs  mod.rs
src/windows/win_hv/src/plugins/: async_command.rs  mod.rs  plugin.rs
src/windows/win_hv/src/plugins/commands/: memory.rs  mod.rs  process.rs  security.rs  thread.rs
src/windows/win_hv/src/services/: async_services.rs  callback_services.rs  io_services.rs  memory_services.rs  mod.rs  process_services.rs  security_services.rs  thread_services.rs
src/windows/win_hv/src/services/commands/: callback.rs  memory.rs  mod.rs  process.rs  security.rs  thread.rs
src/windows/win_hv/src/utils/: alloc.rs  anti_borrow.rs  blanket.rs  danger.rs  handlebox.rs  intrin.asm  intrin.rs  intrinsic.rs  logger.rs  macros.rs  mod.rs  object_handle.rs  pop_guard.rs  scanner.rs  sehptr.rs  timing.rs  transaction.rs
src/windows/win_hv/src/win/: alloc.rs  macros.rs  mod.rs  rtl_utils.rs  timing.rs  unicode_string.rs  utf_to_unicode.rs  utils.rs
tools/: HxPosed.GUI.slnx
tools/HxPosed.Core/: HxPosed.Core.csproj  HxPosed.cs  HypervisorManager.cs  HypervisorStatus.cs  Win32.cs
tools/HxPosed.LogViewer/: Diagnostic.Designer.cs  Diagnostic.cs  Form1.Designer.cs  Form1.cs  HxPosed.LogViewer.csproj  HxPosed.cs  Log.cs  Program.cs
tools/HxPosed.Tests/: App.xaml  HxPosed.Tests.csproj  HxPosed.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessModel.cs  ProtectionView.xaml  ProtectionView.xaml.cs  ThreadModel.cs  Win32.cs
tools/libhxposed/: HxPosed.cs  bindings.bat  err.c  hxposed.c  hxposed.h  libhxposed.vcxproj  libhxposed.vcxproj.filters  trap.asm
tools/pocman/: pocman.c  pocman.vcxproj  pocman.vcxproj.filters
(+125 files in other folders)
