[package]
name = "hv"
version = "0.1.0"
edition = "2024"
categories = ["development-tools::testing", "no-std"]
rust-version = "1.90"
publish = false

[profile.dev]
debug = true

[dependencies]
hxposed_core = {path = "../hxposed_core"}
bit_field = "0.10.3"
bitfield = "0.19.2"
bitvec = { version = "1.0.1", default-features = false }
derive_deref = "1.1.1"
derive_more = { version = "2.0.1", default-features = false, features = [
    "full",
] }
log = { version = "0.4.28", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
spin = "0.10.0"
thiserror = { version = "2.0.16", default-features = false }
x86 = "0.52.0"
bitfield-struct = "0.12.1"

[dev-dependencies]
ctor = "0.5.0"
env_logger = "0.11.8"

[features]
default = ["allocator"]
allocator = []

# Enables logic to support being loaded as a UEFI driver. Note that even without
# this feature, UEFI specific logic is still compiled in, without never executed.
uefi = []