[package]
name = "hxposed_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[dependencies]
bitfield-struct = "0.12.1"
bit_field = "0.10.3"
bitflag = {version = "0.10.1", default-features = false}

[profile.dev]
debug = true
panic="abort"

[profile.test]
panic="abort"

[features]
usermode = []

[lib]
crate-type = ["rlib"]