[package]
name = "check_hv_vendor"
description = "The hypervisor vendor checker for Windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[profile.dev]
debug = true

[dependencies]
hxposed_core = { path = "../../hxposed_core", features = ["usermode"], default-features = false}
uuid = { version = "1.18.1", default-features = false }
async-std = "1.13.2"