[package]
name = "win_hv"
description = "HxPosed kernel driver"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[profile.dev]
debug = true
panic = "abort"

[dependencies]
hxposed_core = {path = "../../hxposed_core", default-features = false}
hv = { path = "../../hvcore", default-features = false }
wdk = "0.4.1"
wdk-sys = "0.5.1"
wdk-alloc = "0.4.1"
bit_field = "0.10.3"
uuid = {version = "1.18.1", default-features = false}
microseh = {version = "1.1.2", default-features = false}
log = {version = "0.4.29", default-features = false}
bitfield-struct = "0.12.1"
com_logger = {version = "0.1.2", default-features = false}
spin = {version = "0.10.0", default-features = false}
hashbrown = {version = "0.16.1", features = ["core"]}
wyhash = {version = "0.6.0", default-features = false}

[build-dependencies]
wdk-build = "0.5.1"

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 31
